[gd_scene load_steps=12 format=3 uid="uid://cv0re3xal0rqn"]

[ext_resource type="Script" path="res://Source/UI/Engine/engine_charger.gd" id="1_2qfuf"]
[ext_resource type="Texture2D" uid="uid://b7n38ic3matv7" path="res://Assets/UI/Engine/engine_tile_pinned.png" id="2_2qfuf"]
[ext_resource type="PackedScene" uid="uid://bwtgx83ngvi3h" path="res://Source/Tiles/Tile Activations/accept_all_activation.tscn" id="3_r86de"]
[ext_resource type="PackedScene" uid="uid://bykepwjoitqvl" path="res://Source/Effects/Targeters/target_random_enemy.tscn" id="4_r86de"]
[ext_resource type="PackedScene" uid="uid://dhh7j41u5eo6u" path="res://Source/Effects/charge_engine_effect.tscn" id="4_rlj5y"]
[ext_resource type="PackedScene" uid="uid://ri7bhdwesyrp" path="res://Source/Effects/give_die_to_target_effect.tscn" id="5_rlj5y"]
[ext_resource type="Texture2D" uid="uid://ct5cvlepd8730" path="res://Assets/UI/Engine/bar_under.png" id="7_uky5e"]
[ext_resource type="Texture2D" uid="uid://dm7m874lwcmni" path="res://Assets/UI/Engine/bar_over.png" id="8_yxyol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5s2d"]
size = Vector2(48, 34)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uky5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxyol"]
bg_color = Color(0.933333, 0.827451, 0.364706, 1)

[node name="Engine Charger" type="Area2D" node_paths=PackedStringArray("activation_node")]
script = ExtResource("1_2qfuf")
activation_node = NodePath("Sprite2D/Accept All Activation")
activation_text = "[color=yellow]Activates[/color] with any value die (die_blank)"
description_text = "Charges the [color=yellow]engine[/color] with the die's (die_blank) value."

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(144, 126)
shape = SubResource("RectangleShape2D_x5s2d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(144, 126)
texture = ExtResource("2_2qfuf")

[node name="Accept All Activation" parent="Sprite2D" instance=ExtResource("3_r86de")]
position = Vector2(0, 1)

[node name="Effects Parent" type="Node2D" parent="."]

[node name="Charge Engine Effect" parent="Effects Parent" instance=ExtResource("4_rlj5y")]

[node name="Target Random Enemy" parent="Effects Parent" instance=ExtResource("4_r86de")]

[node name="Give Die to Target Effect" parent="Effects Parent" instance=ExtResource("5_rlj5y")]

[node name="Bar Under" type="Sprite2D" parent="."]
position = Vector2(188, 145)
texture = ExtResource("7_uky5e")

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(21, 60)
offset_left = 192.0
offset_top = 113.0
offset_right = 213.0
offset_bottom = 174.0
rotation = 0.453786
theme_override_styles/background = SubResource("StyleBoxEmpty_uky5e")
theme_override_styles/fill = SubResource("StyleBoxFlat_yxyol")
max_value = 1.0
value = 0.49
fill_mode = 3
show_percentage = false

[node name="Bar Over" type="Sprite2D" parent="."]
position = Vector2(188, 145)
texture = ExtResource("8_yxyol")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_area_2d_mouse_exited"]
